<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layaout_parent_funcionarios_rfu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="20dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/image_view_foto_funcionario"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_user_icon"
                    android:contentDescription="@string/text_descripcion_imagen" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingVertical="20dp"
                android:paddingHorizontal="5dp"
                android:layout_weight="3">

                <TextView
                    android:id="@+id/text_view_tipo_funcionario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    style="@style/textview_subtitulos_black_bold_medium"
                    android:text="@string/text_tipo_funcionario_mod" />

                <TextView
                    android:id="@+id/text_view_numero_registro_nombres_apellidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="12sp"
                    android:text="@string/text_numero_nombres_apellidos_mod" />

                <TextView
                    android:id="@+id/text_view_correo_electronico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="12sp"
                    android:text="@string/text_correo_electronico_mod" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingVertical="20dp"

                android:layout_weight="1">

                <ImageView
                    android:id="@+id/image_view_telefono_principal"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@color/green_700"
                    android:src="@drawable/common_full_open_on_phone"
                    android:contentDescription="@string/text_descripcion_imagen" />

                <TextView
                    android:id="@+id/text_view_telefono_principal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    style="@style/textview_subtitulos_black_bold_small"
                    android:text="@string/text_telefono_principal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingVertical="20dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/image_view_telefono_secundario"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@color/green_700"
                    android:src="@drawable/common_full_open_on_phone"
                    android:contentDescription="@string/text_descripcion_imagen" />

                <TextView
                    android:id="@+id/text_view_telefono1_secundario"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    style="@style/textview_subtitulos_black_bold_small"
                    android:text="@string/text_telefono_secundario" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>