<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.declaracion.PaseNaranjaRojoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/formato_titulos"/>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:layout_marginVertical="4dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_motivo"
                            style="@style/textview_subtitulos_black_bold_medium" />

                        <TextView
                            android:id="@+id/text_view_motivo"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginVertical="4dp"
                            android:layout_weight="1"
                            android:text="@string/text_motivo_mod"
                            android:textSize="14sp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:layout_marginVertical="4dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_sustento"
                            style="@style/textview_subtitulos_black_bold_medium" />

                        <TextView
                            android:id="@+id/text_view_sustento"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginVertical="4dp"
                            android:layout_weight="1"
                            android:text="@string/text_sustento_mod"
                            android:textSize="14sp" />


                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>