<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layaout_parent_informessini"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="5dp"
        android:backgroundTint="@color/grey_5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">


            <ImageButton
                android:id="@+id/image_button_informesini"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:contentDescription="Enter How Much Cookies You Want"
                android:src="@drawable/ic_photos_library" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5" />

            <TextView
                android:id="@+id/text_view_num_contenedor_sini"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_weight="8"
                android:text="@string/text_contenedor_mod1"
                style="@style/textview_subtitulos_black_large" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5" />

            <ImageView
                android:id="@+id/image_button_deploy_detalle_informesini"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="Enter How Much Cookies You Want"

                android:src="@drawable/ic_down"
                android:tint="@color/colorBlack"/>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="5dp">

        <LinearLayout
            android:id="@+id/detalleInformeSiniLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/text_resultado"
                    style="@style/textview_subtitulos_black_bold_medium" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/text_hipotesis"
                    style="@style/textview_subtitulos_black_bold_medium" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/text_view_resultado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/text_resultado_mod"
                    style="@style/textview_subtitulos_black_medium" />

                <TextView
                    android:id="@+id/text_view_hipotesis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/text_hipotesis_mod"
                    style="@style/textview_subtitulos_black_medium"
                    />


            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>